Nome da página e icones das redes sociais

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agência LandPeople</title>
+    <title>Agência Nazg</title>
 
     <link rel="icon" type="image/png" sizes="32x32" href="./src/images/ag.ico">
 
@@ -157,6 +157,7 @@
             <a href="">
                 <i class="fab fa-twitter-square"></i>
             </a>
+
             <a href="">
                 <i class="fab fa-youtube-square"></i>
             </a>
