--- a/index.html
+++ b/index.html
@@ -1,169 +1,170 @@
-<!DOCTYPE html>
-<html lang="en">
+    <!DOCTYPE html>
+    <html lang="pt-BR">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agência Nazg</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Bate Estaca</title>
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./src/images/ag.ico">
+        <link rel="icon" type="image/png" sizes="32x32" href="./src/images/ico.ico">
 
-    <link rel="stylesheet" href="./src/css/reset.css">
-    <link rel="stylesheet" href="./src/css/variables.css">
-    <link rel="stylesheet" href="./src/css/style.css">
-    <link rel="stylesheet" href="./src/css/menu.css">
+        <link rel="stylesheet" href="./src/css/reset.css">
+        <link rel="stylesheet" href="./src/css/variables.css">
+        <link rel="stylesheet" href="./src/css/style.css">
+        <link rel="stylesheet" href="./src/css/menu.css">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+            rel="stylesheet">
 
-    <link rel="stylesheet" href="./src/css/font-awesome.css">
+        <link rel="stylesheet" href="./src/css/font-awesome.css">
 
-</head>
+    </head>
 
-<body>
+    <body>
 
-    <header class="header">
+        <header class="header">
 
-        <div class="header-container">
+            <div class="header-container">
 
-            <a href="/">
-                <h1 class="logo">Agência Nazg</h1>
-            </a>
+                <a href="/">
+                    <h1 class="logo">Bate Estaca</h1>
+                </a>
+
+                <nav>
+                    <input type="checkbox" id="menu-hamburguer">
+
+                    <label for="menu-hamburguer">
+                        <div class="menu">
+                            <span class="hamburguer"></span>
+                        </div>
+                    </label>
+
+                    <ul>
+                        <li><a href="#about">Sobre</a></li>
+                        <li><a href="#services">Serviços</a></li>
+                        <li><a href="#projects">Projetos</a></li>
+                        <li><a href="#contact">Contato</a></li>
+                    </ul>
+
+                </nav>
+
+            </div>
+
+        </header>
+
+        <section class="hero" id="about">
+            <h2>
+                Fundação para a vida
+            </h2>
+            <a href="#about" class="scrool-arrow"></a>
+        </section>
+
+        <section class="about" id="about">
+
+            <div class="item">
+                <h3>Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum voluptatum
+                    enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum voluptatibus labore
+                    necessitatibus veritatis obcaecati nostrum adipisci.</p>
+                <a href="" class="btn-know-more">Saiba Mais</a>
+            </div>
+
+            <div class="image right"></div>
+
+            <div class="image left"></div>
+
+            <div class="item">
+                <h3>Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum
+                    voluptatum enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum
+                    voluptatibus labore necessitatibus veritatis obcaecati nostrum adipisci.</p>
+                <a href="" class="btn-know-more">Saiba Mais</a>
+            </div>
+
+        </section>
+
+        <section class="services" id="services">
+
+            <div class="service">
+                <img src="./src/images/bolinha1.png" alt="Bolinha 1">
+                <div class="service-info">
+                    <h3>SEO</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe deserunt reprehenderit omnis sapiente
+                        id itaque dicta, exercitationem ipsa error, cupiditate magni iusto, tempora explicabo fugiat
+                        laudantium repellat repellendus accusamus consequatur!</p>
+                </div>
+            </div>
+
+            <div class="service">
+                <img src="./src/images/bolinha2.png" alt="Bolinha 2">
+                <div class="service-info">
+                    <h3>Landing Pages</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe deserunt reprehenderit omnis sapiente
+                        id itaque dicta, exercitationem ipsa error, cupiditate magni iusto, tempora explicabo fugiat
+                        laudantium repellat repellendus accusamus consequatur!</p>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="projects" id="projects">
+
+            <div class="project">
+                <a href="">
+                    <img src="./src/images/tomatoes.jpg" alt="Tomatoes">
+                </a>
+            </div>
+
+            <div class="project">
+                <a href="">
+                    <img src="./src/images/landscape.jpg" alt="Landscape">
+                </a>
+            </div>
+
+            <div class="project">
+                <a href="">
+                    <img src="./src/images/plants.jpg" alt="Plants">
+                </a>
+            </div>
+
+            <div class="project">
+                <a href="">
+                    <img src="./src/images/flowers.jpg" alt="Flowers">
+                </a>
+            </div>
+
+        </section>
+
+        <footer class="footer" id="contact">
+            <h4>Agência Nazg</h4>    
 
             <nav>
-                <input type="checkbox" id="menu-hamburguer">
-
-                <label for="menu-hamburguer">
-                    <div class="menu">
-                        <span class="hamburguer"></span>
-                    </div>
-                </label>
-
                 <ul>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
                 </ul>
-
             </nav>
 
-        </div>
+            <div class="social">
+                <a href="">
+                    <i class="fab fa-facebook-square"></i>
+                </a>
+                <a href="">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="">
+                    <i class="fab fa-twitter-square"></i>
+                </a>
 
-    </header>
-
-    <section class="hero">
-        <h2>
-            We make cool thinks
-        </h2>
-    </section>
-
-    <section class="about" id="about">
-
-        <div class="item">
-            <h3>Title</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum voluptatum
-                enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum voluptatibus labore
-                necessitatibus veritatis obcaecati nostrum adipisci.</p>
-            <a href="" class="btn-know-more">Saiba Mais</a>
-        </div>
-
-        <div class="image right"></div>
-
-        <div class="image left"></div>
-
-        <div class="item">
-            <h3>Title</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum
-                voluptatum enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum
-                voluptatibus labore necessitatibus veritatis obcaecati nostrum adipisci.</p>
-            <a href="" class="btn-know-more">Saiba Mais</a>
-        </div>
-
-    </section>
-
-    <section class="services" id="services">
-
-        <div class="service">
-            <img src="./src/images/bolinha1.png" alt="Bolinha 1">
-            <div class="service-info">
-                <h3>SEO</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe deserunt reprehenderit omnis sapiente
-                    id itaque dicta, exercitationem ipsa error, cupiditate magni iusto, tempora explicabo fugiat
-                    laudantium repellat repellendus accusamus consequatur!</p>
+                <a href="">
+                    <i class="fab fa-youtube-square"></i>
+                </a>
             </div>
-        </div>
 
-        <div class="service">
-            <img src="./src/images/bolinha2.png" alt="Bolinha 2">
-            <div class="service-info">
-                <h3>Landing Pages</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe deserunt reprehenderit omnis sapiente
-                    id itaque dicta, exercitationem ipsa error, cupiditate magni iusto, tempora explicabo fugiat
-                    laudantium repellat repellendus accusamus consequatur!</p>
-            </div>
-        </div>
+        </footer>
+    </body>
 
-    </section>
-
-    <section class="projects" id="projects">
-
-        <div class="project">
-            <a href="">
-                <img src="./src/images/tomatoes.jpg" alt="Tomatoes">
-            </a>
-        </div>
-
-        <div class="project">
-            <a href="">
-                <img src="./src/images/landscape.jpg" alt="Landscape">
-            </a>
-        </div>
-
-        <div class="project">
-            <a href="">
-                <img src="./src/images/plants.jpg" alt="Plants">
-            </a>
-        </div>
-
-        <div class="project">
-            <a href="">
-                <img src="./src/images/flowers.jpg" alt="Flowers">
-            </a>
-        </div>
-
-    </section>
-
-    <footer class="footer" id="contact">
-        <h4>Agência Nazg</h4>    
-
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#projects">Projects</a></li>
-            </ul>
-        </nav>
-
-        <div class="social">
-            <a href="">
-                <i class="fab fa-facebook-square"></i>
-            </a>
-            <a href="">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="">
-                <i class="fab fa-twitter-square"></i>
-            </a>
-
-            <a href="">
-                <i class="fab fa-youtube-square"></i>
-            </a>
-        </div>
-
-    </footer>
-</body>
-
-</html>
+    </html>
