Finalização do início

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <section class="about" id="about">
 
             <div class="item">
-                <h3>Title</h3>
+                <h3>Sobre Nós</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum voluptatum
                     enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum voluptatibus labore
                     necessitatibus veritatis obcaecati nostrum adipisci.</p>
@@ -76,7 +76,7 @@
             <div class="image left"></div>
 
             <div class="item">
-                <h3>Title</h3>
+                <h3>Parcerias</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum
                     voluptatum enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum
                     voluptatibus labore necessitatibus veritatis obcaecati nostrum adipisci.</p>
@@ -88,9 +88,9 @@
         <section class="services" id="services">
 
             <div class="service">
-                <img src="./src/images/bolinha1.png" alt="Bolinha 1">
+                <img src="./src/images/img1.jpg" alt="Bolinha 1">
                 <div class="service-info">
-                    <h3>SEO</h3>
+                    <h3>Fundação</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe deserunt reprehenderit omnis sapiente
                         id itaque dicta, exercitationem ipsa error, cupiditate magni iusto, tempora explicabo fugiat
                         laudantium repellat repellendus accusamus consequatur!</p>
@@ -98,9 +98,9 @@
             </div>
 
             <div class="service">
-                <img src="./src/images/bolinha2.png" alt="Bolinha 2">
+                <img src="./src/images/img3.jpg" alt="Bolinha 2">
                 <div class="service-info">
-                    <h3>Landing Pages</h3>
+                    <h3>Alicerce é a Base</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe deserunt reprehenderit omnis sapiente
                         id itaque dicta, exercitationem ipsa error, cupiditate magni iusto, tempora explicabo fugiat
                         laudantium repellat repellendus accusamus consequatur!</p>
@@ -113,38 +113,38 @@
 
             <div class="project">
                 <a href="">
-                    <img src="./src/images/tomatoes.jpg" alt="Tomatoes">
+                    <img src="./src/images/Bate-estacas1.png" alt="Desenho">
                 </a>
             </div>
 
             <div class="project">
                 <a href="">
-                    <img src="./src/images/landscape.jpg" alt="Landscape">
+                    <img src="./src/images/img4.jpg" alt="Prospectro">
                 </a>
             </div>
 
             <div class="project">
                 <a href="">
-                    <img src="./src/images/plants.jpg" alt="Plants">
+                    <img src="./src/images/img3.jpg" alt="Planta">
                 </a>
             </div>
 
             <div class="project">
                 <a href="">
-                    <img src="./src/images/flowers.jpg" alt="Flowers">
+                    <img src="./src/images/img1.jpg" alt="Trabalho">
                 </a>
             </div>
 
         </section>
 
         <footer class="footer" id="contact">
-            <h4>Agência Nazg</h4>    
+            <h4>Bate Estaca</h4>    
 
             <nav>
                 <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#about">Sobre</a></li>
+                    <li><a href="#services">Serviços</a></li>
+                    <li><a href="#projects">Projetos</a></li>
                 </ul>
             </nav>
 
@@ -152,7 +152,7 @@
                 <a href="">
                     <i class="fab fa-facebook-square"></i>
                 </a>
-                <a href="">
+                <a href="https://www.instagram.com/p/DMvpWd_Shb1/?igsh=azlzbXBjdWx5b3No" target="_blank">
                     <i class="fab fa-instagram"></i>
                 </a>
                 <a href="">
