--- a/index.html
+++ b/index.html
@@ -1,170 +1,201 @@
-    <!DOCTYPE html>
-    <html lang="pt-BR">
+<!DOCTYPE html>
+<html lang="pt-BR">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bate Estaca</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bate Estaca</title>
 
-        <link rel="icon" type="image/png" sizes="32x32" href="./src/images/ico.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="./src/images/ico.ico">
 
-        <link rel="stylesheet" href="./src/css/reset.css">
-        <link rel="stylesheet" href="./src/css/variables.css">
-        <link rel="stylesheet" href="./src/css/style.css">
-        <link rel="stylesheet" href="./src/css/menu.css">
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/variables.css">
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/menu.css">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-            rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
-        <link rel="stylesheet" href="./src/css/font-awesome.css">
+    <link rel="stylesheet" href="./src/css/font-awesome.css">
 
-    </head>
+</head>
 
-    <body>
+<body>
 
-        <header class="header">
+    <header class="header">
 
-            <div class="header-container">
+        <div class="header-container">
 
-                <a href="/">
-                    <h1 class="logo">Bate Estaca</h1>
-                </a>
-
-                <nav>
-                    <input type="checkbox" id="menu-hamburguer">
-
-                    <label for="menu-hamburguer">
-                        <div class="menu">
-                            <span class="hamburguer"></span>
-                        </div>
-                    </label>
-
-                    <ul>
-                        <li><a href="#about">Sobre</a></li>
-                        <li><a href="#services">Serviços</a></li>
-                        <li><a href="#projects">Projetos</a></li>
-                        <li><a href="#contact">Contato</a></li>
-                    </ul>
-
-                </nav>
-
-            </div>
-
-        </header>
-
-        <section class="hero" id="about">
-            <h2>
-                Fundação para a vida
-            </h2>
-            <a href="#about" class="scrool-arrow"></a>
-        </section>
-
-        <section class="about" id="about">
-
-            <div class="item">
-                <h3>Sobre Nós</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum voluptatum
-                    enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum voluptatibus labore
-                    necessitatibus veritatis obcaecati nostrum adipisci.</p>
-                <a href="" class="btn-know-more">Saiba Mais</a>
-            </div>
-
-            <div class="image right"></div>
-
-            <div class="image left"></div>
-
-            <div class="item">
-                <h3>Parcerias</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum
-                    voluptatum enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum
-                    voluptatibus labore necessitatibus veritatis obcaecati nostrum adipisci.</p>
-                <a href="" class="btn-know-more">Saiba Mais</a>
-            </div>
-
-        </section>
-
-        <section class="services" id="services">
-
-            <div class="service">
-                <img src="./src/images/img1.jpg" alt="Bolinha 1">
-                <div class="service-info">
-                    <h3>Fundação</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe deserunt reprehenderit omnis sapiente
-                        id itaque dicta, exercitationem ipsa error, cupiditate magni iusto, tempora explicabo fugiat
-                        laudantium repellat repellendus accusamus consequatur!</p>
-                </div>
-            </div>
-
-            <div class="service">
-                <img src="./src/images/img3.jpg" alt="Bolinha 2">
-                <div class="service-info">
-                    <h3>Alicerce é a Base</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe deserunt reprehenderit omnis sapiente
-                        id itaque dicta, exercitationem ipsa error, cupiditate magni iusto, tempora explicabo fugiat
-                        laudantium repellat repellendus accusamus consequatur!</p>
-                </div>
-            </div>
-
-        </section>
-
-        <section class="projects" id="projects">
-
-            <div class="project">
-                <a href="">
-                    <img src="./src/images/Bate-estacas1.png" alt="Desenho">
-                </a>
-            </div>
-
-            <div class="project">
-                <a href="">
-                    <img src="./src/images/img4.jpg" alt="Prospectro">
-                </a>
-            </div>
-
-            <div class="project">
-                <a href="">
-                    <img src="./src/images/img3.jpg" alt="Planta">
-                </a>
-            </div>
-
-            <div class="project">
-                <a href="">
-                    <img src="./src/images/img1.jpg" alt="Trabalho">
-                </a>
-            </div>
-
-        </section>
-
-        <footer class="footer" id="contact">
-            <h4>Bate Estaca</h4>    
+            <a href="/">
+                <h1 class="logo">Bate Estaca</h1>
+            </a>
 
             <nav>
+                <input type="checkbox" id="menu-hamburguer">
+
+                <label for="menu-hamburguer">
+                    <div class="menu">
+                        <span class="hamburguer"></span>
+                    </div>
+                </label>
+
                 <ul>
                     <li><a href="#about">Sobre</a></li>
                     <li><a href="#services">Serviços</a></li>
                     <li><a href="#projects">Projetos</a></li>
+                    <li><a href="#contact">Contato</a></li>
                 </ul>
+
             </nav>
 
-            <div class="social">
-                <a href="">
-                    <i class="fab fa-facebook-square"></i>
-                </a>
-                <a href="https://www.instagram.com/p/DMvpWd_Shb1/?igsh=azlzbXBjdWx5b3No" target="_blank">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a href="">
-                    <i class="fab fa-twitter-square"></i>
-                </a>
+        </div>
 
-                <a href="">
-                    <i class="fab fa-youtube-square"></i>
-                </a>
+    </header>
+
+    <section class="hero" id="about">
+        <h2>
+            Fundação para a vida
+        </h2>
+        <a href="#about" class="scrool-arrow"></a>
+    </section>
+
+    <section class="about" id="about">
+
+        <div class="item">
+            <h3>Sobre Nós</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum voluptatum
+                enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum voluptatibus labore
+                necessitatibus veritatis obcaecati nostrum adipisci.</p>
+            <a href="" class="btn-know-more">Saiba Mais</a>
+        </div>
+
+        <div class="image right"></div>
+
+        <div class="image left"></div>
+
+        <div class="item">
+            <h3>Parcerias</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum
+                voluptatum enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum
+                voluptatibus labore necessitatibus veritatis obcaecati nostrum adipisci.</p>
+            <a href="" class="btn-know-more">Saiba Mais</a>
+        </div>
+
+    </section>
+
+    <section class="services" id="services">
+
+        <div class="service">
+            <img src="./src/images/img1.jpg" alt="Bolinha 1">
+            <div class="service-info">
+                <h3>Fundação</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe deserunt reprehenderit omnis sapiente
+                    id itaque dicta, exercitationem ipsa error, cupiditate magni iusto, tempora explicabo fugiat
+                    laudantium repellat repellendus accusamus consequatur!</p>
             </div>
+        </div>
 
-        </footer>
-    </body>
+        <div class="service">
+            <img src="./src/images/img3.jpg" alt="Bolinha 2">
+            <div class="service-info">
+                <h3>Alicerce é a Base</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe deserunt reprehenderit omnis sapiente
+                    id itaque dicta, exercitationem ipsa error, cupiditate magni iusto, tempora explicabo fugiat
+                    laudantium repellat repellendus accusamus consequatur!</p>
+            </div>
+        </div>
 
-    </html>
+    </section>
+
+    <section class="projects" id="projects">
+
+        <div class="project">
+            <a href="">
+                <img src="./src/images/Bate-estacas1.png" alt="Desenho">
+            </a>
+        </div>
+
+        <div class="project">
+            <a href="">
+                <img src="./src/images/img4.jpg" alt="Prospectro">
+            </a>
+        </div>
+
+        <div class="project">
+            <a href="">
+                <img src="./src/images/img3.jpg" alt="Planta">
+            </a>
+        </div>
+
+        <div class="project">
+            <a href="">
+                <img src="./src/images/img1.jpg" alt="Trabalho">
+            </a>
+        </div>
+
+    </section>
+
+    <footer class="footer" id="contact">
+        <h4>Bate Estaca</h4>
+
+        <nav>
+            <ul>
+                <li><a href="#about">Sobre</a></li>
+                <li><a href="#services">Serviços</a></li>
+                <li><a href="#projects">Projetos</a></li>
+            </ul>
+        </nav>
+
+        <div class="social">
+            <a href="">
+                <i class="fab fa-facebook-square"></i>
+            </a>
+            <a href="https://www.instagram.com/p/DMvpWd_Shb1/?igsh=azlzbXBjdWx5b3No" target="_blank">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="">
+                <i class="fab fa-twitter-square"></i>
+            </a>
+
+            <a href="">
+                <i class="fab fa-youtube-square"></i>
+            </a>
+        </div>
+
+        <div class="contact-form">
+            <form action="enviar-email.php" method="POST">
+                <div class="form-group">
+                    <label for="nome">Nome:</label>
+                    <input type="text" name="nome" id="nome" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="empresa">Empresa:</label>
+                    <input type="text" name="empresa" id="empresa" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" name="email" id="email" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="telefone">Telefone:</label>
+                    <input type="text" name="telefone" id="telefone" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="mensagem">Mensagem:</label>
+                    <textarea name="mensagem" id="mensagem" rows="5" required></textarea>
+                </div>
+
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+
+    </footer>
+</body>
+
+</html>
