Atualizações nas cores e no form do email

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
         </div>
 
         <div class="contact-form">
+            <h2><strong>Solicite um orçamento!</strong></h2>
             <form action="enviar-email.php" method="POST">
                 <div class="form-group">
                     <label for="nome">Nome:</label>
