sobre.html funcional

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bate Estaca</title>
+    <title>Estaca Max</title>
 
     <link rel="icon" type="image/png" sizes="32x32" href="./src/images/ico.ico">
 
@@ -29,7 +29,7 @@
         <div class="header-container">
 
             <a href="/">
-                <h1 class="logo">Bate Estaca</h1>
+                <h1 class="logo">Estaca Max</h1>
             </a>
 
             <nav>
@@ -61,34 +61,34 @@
         <a href="#about" class="scrool-arrow"></a>
     </section>
 
-    <section class="about" id="about">
+        <section class="about" id="about">
 
-        <div class="item">
-            <h3>Sobre Nós</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum voluptatum
-                enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum voluptatibus labore
-                necessitatibus veritatis obcaecati nostrum adipisci.</p>
-            <a href="" class="btn-know-more">Saiba Mais</a>
-        </div>
+            <div class="item">
+                <h3>Sobre Nós</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum voluptatum
+                    enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum voluptatibus labore
+                    necessitatibus veritatis obcaecati nostrum adipisci.</p>
+                <a href="sobre.html" class="btn-know-more">Saiba Mais</a>
+            </div>
 
-        <div class="image right"></div>
+            <div class="image right"></div>
 
-        <div class="image left"></div>
+            <div class="image left"></div>
 
-        <div class="item">
-            <h3>Parcerias</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum
-                voluptatum enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum
-                voluptatibus labore necessitatibus veritatis obcaecati nostrum adipisci.</p>
-            <a href="" class="btn-know-more">Saiba Mais</a>
-        </div>
+            <div class="item">
+                <h3>Parcerias</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum
+                    voluptatum enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum
+                    voluptatibus labore necessitatibus veritatis obcaecati nostrum adipisci.</p>
+                <a href="" class="btn-know-more">Saiba Mais</a>
+            </div>
 
-    </section>
+        </section>
 
     <section class="services" id="services">
 
         <div class="service">
-            <img src="./src/images/img1.jpg" alt="Bolinha 1">
+            <img src="./src/images/img1.png" alt="Fundação">
             <div class="service-info">
                 <h3>Fundação</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe deserunt reprehenderit omnis sapiente
@@ -98,7 +98,7 @@
         </div>
 
         <div class="service">
-            <img src="./src/images/img3.jpg" alt="Bolinha 2">
+            <img src="./src/images/img3.png" alt="Alicerce">
             <div class="service-info">
                 <h3>Alicerce é a Base</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe deserunt reprehenderit omnis sapiente
@@ -113,7 +113,7 @@
 
         <div class="project">
             <a href="">
-                <img src="./src/images/Bate-estacas1.png" alt="Desenho">
+                <img src="./src/images/contato2.png" alt="Desenho">
             </a>
         </div>
 
@@ -125,20 +125,20 @@
 
         <div class="project">
             <a href="">
-                <img src="./src/images/img3.jpg" alt="Planta">
+                <img src="./src/images/contato1.png" alt="Contato1">
             </a>
         </div>
 
         <div class="project">
             <a href="">
-                <img src="./src/images/img1.jpg" alt="Trabalho">
+                <img src="./src/images/Bate-estacas1.png" alt="Contato2">
             </a>
         </div>
 
     </section>
 
     <footer class="footer" id="contact">
-        <h4>Bate Estaca</h4>
+        <h4>Estaca Max - Fundação para a vida</h4>
 
         <nav>
             <ul>
@@ -149,18 +149,11 @@
         </nav>
 
         <div class="social">
-            <a href="">
+            <a href="https://www.facebook.com/estacamax" target="_blank">
                 <i class="fab fa-facebook-square"></i>
             </a>
-            <a href="https://www.instagram.com/p/DMvpWd_Shb1/?igsh=azlzbXBjdWx5b3No" target="_blank">
+            <a href="https://www.instagram.com/estacamax_estaca_helice/" target="_blank">
                 <i class="fab fa-instagram"></i>
-            </a>
-            <a href="">
-                <i class="fab fa-twitter-square"></i>
-            </a>
-
-            <a href="">
-                <i class="fab fa-youtube-square"></i>
             </a>
         </div>
 
