Acertando erros da IA

--- a/index.html
+++ b/index.html
@@ -61,29 +61,29 @@
         <a href="#about" class="scrool-arrow"></a>
     </section>
 
-        <section class="about" id="about">
+    <section class="about" id="about">
 
-            <div class="item">
-                <h3>Sobre Nós</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum voluptatum
-                    enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum voluptatibus labore
-                    necessitatibus veritatis obcaecati nostrum adipisci.</p>
-                <a href="sobre.html" class="btn-know-more">Saiba Mais</a>
-            </div>
+        <div class="item">
+            <h3>Sobre Nós</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum voluptatum
+                enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum voluptatibus labore
+                necessitatibus veritatis obcaecati nostrum adipisci.</p>
+            <a href="sobre.html" class="btn-know-more">Saiba Mais</a>
+        </div>
 
-            <div class="image right"></div>
+        <div class="image right"></div>
 
-            <div class="image left"></div>
+        <div class="image left"></div>
 
-            <div class="item">
-                <h3>Parcerias</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum
-                    voluptatum enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum
-                    voluptatibus labore necessitatibus veritatis obcaecati nostrum adipisci.</p>
-                <a href="" class="btn-know-more">Saiba Mais</a>
-            </div>
+        <div class="item">
+            <h3>Parcerias</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum
+                voluptatum enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum
+                voluptatibus labore necessitatibus veritatis obcaecati nostrum adipisci.</p>
+            <a href="parceria.html" class="btn-know-more">Saiba Mais</a>
+        </div>
 
-        </section>
+    </section>
 
     <section class="services" id="services">
 
@@ -139,6 +139,7 @@
 
     <footer class="footer" id="contact">
         <h4>Estaca Max - Fundação para a vida</h4>
+        <h5>estacamax.estacahelice@gmail.com</h5>
 
         <nav>
             <ul>
@@ -188,6 +189,14 @@
                 <button type="submit">Enviar</button>
             </form>
         </div>
+
+        <section class="dev-partner">
+            <p style="font-size: 0.9rem; color: #555;">
+                Desenvolvido por <a href="https://vetor256.com" target="_blank"
+                    style="color: coral; font-weight: bold;">Vetor256.</a> — Progredindo com você na era da Tecnologia.
+            </p>
+        </section>
+
 
     </footer>
 </body>
