Finalizando parceria.html

--- a/parceria.html
+++ b/parceria.html
@@ -23,35 +23,47 @@
 
 <body>
     <section class="about" id="about">
-        <div class="par">
-            <div class="item">
-                <h3>Parceiro Tecnológico</h3>
-                <p>A <strong>Vetor256</strong> é nossa aliada no universo digital, responsável por criar e manter a
-                    presença online da Estaca Max com inovação, segurança e performance.</p>
-                <p>Conheça mais: <a href="https://vetor256.com" target="_blank"
-                        style="color: coral; font-weight: bold;">vetor256.com.br</a></p>
-            </div>
-            <div class="image right" style="background-image: url('./src/images/vetor256.png');"></div>
-        </div>
-
-        <div class="image left" style="background-image: url('./src/images/equipe.jpg');"></div>
         <div class="item">
-            <h3>Nossa Equipe</h3>
-            <p>Contamos com engenheiros, operadores e técnicos capacitados, além do suporte estratégico da
-                <strong>Vetor256</strong>, responsável pela presença digital da empresa.
+            <h3>Parceiro Tecnológico</h3>
+            <p>A <strong>Vetor256</strong> é nossa aliada no universo digital, responsável por criar e manter a
+                presença online da Estaca Max com inovação, segurança e performance.</p>
+            <p>Conheça mais: <a href="https://vetor256.com" target="_blank"
+                    style="color: coral; font-weight: bold;">vetor256.com.br</a></p>
+        </div>
+        <div class="image right" style=" background-image: url('./src/images/Cartão de Visitas Vetor256.-1.png');
+                                        width: 400px;
+                                        height: 240px;
+                                        display: flex;
+                                        justify-content: center;
+                                        align-items: center;
+                                        background-size: contain;
+                                        background-repeat: no-repeat;
+                                        background-position: center;
+                                        margin: 150px auto 0;">
+        </div>
+        <div class="image right" style="background-image: url('./src/images/parceria1.jpg');
+            width: 600px;
+            height: 480px;
+            background-size: cover;">
+        </div>
+        <div class="item">
+            <h3>Parcerias em Construção</h3>
+            <p>A Estaca Max está abrindo caminho para novas colaborações nas áreas de engenharia, logística,
+                sustentabilidade e inovação em obra.</p>
+            <p><em>Moacyr está selecionando os próximos nomes que vão fazer parte dessa jornada de crescimento.</em>
             </p>
         </div>
-
         <div class="item">
-            <h3>Compromisso</h3>
-            <ul>
-                <li>🛠️ Segurança no processo construtivo</li>
-                <li>📐 Precisão nos projetos</li>
-                <li>🌱 Sustentabilidade na execução</li>
-                <li>⏱️ Entrega dentro do prazo</li>
-            </ul>
+            <h3>Quer se tornar parceiro?</h3>
+            <p>Estamos abertos para empresas que compartilham dos nossos valores e visão de futuro. Junte-se à
+                Estaca Max e participe da transformação do setor de fundações.</p>
+            <p>Entre em contato conosco através do formulário no index.html ou através do email abaixo.</p>
         </div>
-        <div class="image right" style="background-image: url('./src/images/compromiso.jpg');"></div>
+        <div class="image right" style="background-image: url('./src/images/parceria2.jpg');
+            width: 600px;
+            height: 480px;
+            background-size: cover;">
+        </div>
     </section>
 
     <footer class="footer">
@@ -60,14 +72,14 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="parceria.html">Parcerias</a></li>
+                <li><a href="sobre.html">Sobre Nós</a></li>
             </ul>
         </nav>
         <div class="social">
             <a href="https://www.facebook.com/estacamax" target="_blank">
                 <i class="fab fa-facebook-square"></i>
             </a>
-            <a href="https://www.instagram.com/p/DMvpWd_Shb1/?igsh=azlzbXBjdWx5b3No" target="_blank">
+            <a href="https://www.instagram.com/estacamax_estaca_helice/" target="_blank">
                 <i class="fab fa-instagram"></i>
             </a>
         </div>
