--- a/sobre.html
+++ b/sobre.html
@@ -22,13 +22,6 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="header-container">
-            <a href="index.html">
-                <h1 class="logo">Estaca Max</h1>
-            </a>
-        </div>
-    </header>
 
     <section class="about" id="about">
         <div class="item">
@@ -45,7 +38,8 @@
         <div class="item">
             <h3>Nossa Equipe</h3>
             <p>Contamos com engenheiros, operadores e técnicos capacitados, além do suporte estratégico da
-                <strong>Vetor256</strong>, responsável pela presença digital da empresa.</p>
+                <strong>Vetor256</strong>, responsável pela presença digital da empresa.
+            </p>
         </div>
 
         <div class="item">
@@ -62,19 +56,27 @@
 
     <footer class="footer">
         <h4>Estaca Max - Fundação para a vida</h4>
+        <h5>estacamax.estacahelice@gmail.com</h5>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="parceria.html">Parcerias</a></li>
             </ul>
         </nav>
         <div class="social">
             <a href="https://www.facebook.com/estacamax" target="_blank">
                 <i class="fab fa-facebook-square"></i>
             </a>
-            <a href="https://www.instagram.com/p/DMvpWd_Shb1/?igsh=azlzbXBjdWx5b3No" target="_blank">
+            <a href="https://www.instagram.com/estacamax_estaca_helice/" target="_blank">
                 <i class="fab fa-instagram"></i>
             </a>
         </div>
+        <section class="dev-partner">
+            <p style="font-size: 0.9rem; color: #555;">
+                Desenvolvido por <a href="https://vetor256.com" target="_blank"
+                    style="color: coral; font-weight: bold;">Vetor256.</a> — Progredindo com você na era da Tecnologia.
+            </p>
+        </section>
     </footer>
 </body>
 
