Finalizando site com envio de email

--- a/parceria.html
+++ b/parceria.html
@@ -68,7 +68,19 @@
 
     <footer class="footer">
         <h4>Estaca Max - Fundação para a vida</h4>
-        <h5>estacamax.estacahelice@gmail.com</h5>
+        <h5>Entre em contato</h5>
+        <h5>
+            <a href="mailto:estacamax.estacahelice@gmail.com?subject=Orçamento%20via%20site"
+                style="color: crimson; font-weight: bold; text-decoration: none;">
+                estacamax.estacahelice@gmail.com
+            </a>
+        </h5>
+        <p>
+            <a href="https://api.whatsapp.com/send?phone=5519997177071&text=Olá!%20Gostaria%20de%20solicitar%20um%20orçamento%20com%20a%20Estaca%20Max."
+                target="_blank" style="color: green; font-weight: bold; text-decoration: none;">
+                Solicitar orçamento via WhatsApp
+            </a>
+        </p>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
