--- a/index.html
+++ b/index.html
@@ -139,7 +139,19 @@
 
     <footer class="footer" id="contact">
         <h4>Estaca Max - Fundação para a vida</h4>
-        <h5>estacamax.estacahelice@gmail.com</h5>
+        <h5>Entre em contato</h5>
+        <h5>
+            <a href="mailto:estacamax.estacahelice@gmail.com?subject=Orçamento%20via%20site"
+                style="color: crimson; font-weight: bold; text-decoration: none;">
+                estacamax.estacahelice@gmail.com
+            </a>
+        </h5>
+        <p>
+            <a href="https://api.whatsapp.com/send?phone=5519997177071&text=Olá!%20Gostaria%20de%20solicitar%20um%20orçamento%20com%20a%20Estaca%20Max."
+                target="_blank" style="color: green; font-weight: bold; text-decoration: none;">
+                Solicitar orçamento via WhatsApp
+            </a>
+        </p>
 
         <nav>
             <ul>
@@ -158,7 +170,7 @@
             </a>
         </div>
 
-        <div class="contact-form">
+        <!-- <div class="contact-form">
             <h2><strong>Solicite um orçamento!</strong></h2>
             <form action="enviar-email.php" method="POST">
                 <div class="form-group">
@@ -188,7 +200,7 @@
 
                 <button type="submit">Enviar</button>
             </form>
-        </div>
+        </div> -->
 
         <section class="dev-partner">
             <p style="font-size: 0.9rem; color: #555;">
