Trocando os Lorem Ipsum por Palavras de verdade

--- a/index.html
+++ b/index.html
@@ -65,9 +65,12 @@
 
         <div class="item">
             <h3>Sobre Nós</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum voluptatum
-                enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum voluptatibus labore
-                necessitatibus veritatis obcaecati nostrum adipisci.</p>
+            <p>
+                Fundada com o compromisso de entregar excelência em fundações, a Estaca Max atua no setor de Bate Estaca
+                oferecendo soluções seguras, ágeis e eficientes para obras de pequeno, médio e grande porte.
+                Com equipamentos modernos e uma equipe altamente capacitada, buscamos atender às necessidades do mercado
+                com responsabilidade técnica, respeito ao meio ambiente e foco total na qualidade.
+            </p>
             <a href="sobre.html" class="btn-know-more">Saiba Mais</a>
         </div>
 
@@ -77,9 +80,14 @@
 
         <div class="item">
             <h3>Parcerias</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia distinctio nesciunt illum
-                voluptatum enim exercitationem, minus, in maiores natus unde pariatur, perferendis ipsum
-                voluptatibus labore necessitatibus veritatis obcaecati nostrum adipisci.</p>
+            <p>
+                Acreditamos que grandes obras exigem grandes aliados. A Estaca Max valoriza parcerias duradouras com
+                construtoras, engenheiros e profissionais do setor, contribuindo para projetos que demandam precisão e
+                confiança em fundações.
+                Nossa atuação colaborativa permite unir forças para entregar soluções estruturais com agilidade,
+                responsabilidade e excelência técnica. Além de contarmos com nosso parceiro no nicho da tecnologia, a
+                empresa Vetor256.
+            </p>
             <a href="parceria.html" class="btn-know-more">Saiba Mais</a>
         </div>
 
@@ -91,9 +99,13 @@
             <img src="./src/images/img1.png" alt="Fundação">
             <div class="service-info">
                 <h3>Fundação</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe deserunt reprehenderit omnis sapiente
-                    id itaque dicta, exercitationem ipsa error, cupiditate magni iusto, tempora explicabo fugiat
-                    laudantium repellat repellendus accusamus consequatur!</p>
+                <p>
+                    A fundação é o alicerce de qualquer construção segura e duradoura. Na Estaca Max, aplicamos técnicas
+                    modernas de bate estaca que garantem resistência, estabilidade e alto desempenho em terrenos dos
+                    mais variados tipos.
+                    Nosso compromisso é entregar soluções eficientes e seguras, contribuindo para a confiabilidade
+                    estrutural das obras que ajudamos a erguer.
+                </p>
             </div>
         </div>
 
@@ -101,9 +113,12 @@
             <img src="./src/images/img3.png" alt="Alicerce">
             <div class="service-info">
                 <h3>Alicerce é a Base</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe deserunt reprehenderit omnis sapiente
-                    id itaque dicta, exercitationem ipsa error, cupiditate magni iusto, tempora explicabo fugiat
-                    laudantium repellat repellendus accusamus consequatur!</p>
+                <p>
+                    Toda grande construção começa com uma base firme. Mais do que concreto e aço, o alicerce representa
+                    a confiança depositada em um projeto bem executado.
+                    Na Estaca Max, tratamos cada obra como única, garantindo que seu alicerce esteja à altura dos sonhos
+                    que ela sustenta. Nossa missão é entregar segurança desde o primeiro impacto.
+                </p>
             </div>
         </div>
 
