Retirando informações desnecessárias

--- a/parceria.html
+++ b/parceria.html
@@ -57,7 +57,7 @@
             <h3>Quer se tornar parceiro?</h3>
             <p>Estamos abertos para empresas que compartilham dos nossos valores e visão de futuro. Junte-se à
                 Estaca Max e participe da transformação do setor de fundações.</p>
-            <p>Entre em contato conosco através do formulário no index.html ou através do email abaixo.</p>
+            <p>Entre em contato conosco através do email abaixo.</p>
         </div>
         <div class="image right" style="background-image: url('./src/images/parceria2.jpg');
             width: 600px;
