Acertando link do whastapp

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="header-container">
 
             <a href="/">
-                <h1 class="logo">Estaca Max</h1>
+                <h1 style="color: blue;" class="logo">Estacamax Estaca Hélice</h1>
             </a>
 
             <nav>
@@ -56,7 +56,7 @@
 
     <section class="hero" id="about">
         <h2>
-            Fundação para a vida
+            Fundações Especiais
         </h2>
         <a href="#about" class="scrool-arrow"></a>
     </section>
@@ -66,12 +66,14 @@
         <div class="item">
             <h3>Sobre Nós</h3>
             <p>
-                Fundada com o compromisso de entregar excelência em fundações, a Estaca Max atua no setor de Bate Estaca
-                oferecendo soluções seguras, ágeis e eficientes para obras de pequeno, médio e grande porte.
-                Com equipamentos modernos e uma equipe altamente capacitada, buscamos atender às necessidades do mercado
-                com responsabilidade técnica, respeito ao meio ambiente e foco total na qualidade.
+                Fundada em 2008 com execução de estacas tipo "strauss" e com o compromisso de entregar excelência em
+                fundações,
+                hoje passamos a contar com equipamentos modernos tipo "Hélice Contínua", oferecendo soluções seguras,
+                ágeis e eficientes para
+                obras de pequeno, médio e grande porte. Contamos com uma equipe altamente capacitada, buscando soluções
+                e harmonia, visando interagir desde o canteiro de obras, com colaboradores, fornecedores, concreteiras e
+                engenharia com foco total na qualidade, agilidade e segurança.
             </p>
-            <a href="sobre.html" class="btn-know-more">Saiba Mais</a>
         </div>
 
         <div class="image right"></div>
@@ -88,7 +90,6 @@
                 responsabilidade e excelência técnica. Além de contarmos com nosso parceiro no nicho da tecnologia, a
                 empresa Vetor256.
             </p>
-            <a href="parceria.html" class="btn-know-more">Saiba Mais</a>
         </div>
 
     </section>
@@ -154,7 +155,7 @@
             </a>
         </h5>
         <p>
-            <a href="https://api.whatsapp.com/send?phone=5519997177071&text=Olá!%20Gostaria%20de%20solicitar%20um%20orçamento%20com%20a%20Estaca%20Max."
+            <a href="https://api.whatsapp.com/send?phone=5519991642519&text=Ol%C3%A1!%20Gostaria%20de%20solicitar%20um%20or%C3%A7amento%20com%20a%20Estacamax."
                 target="_blank" style="color: green; font-weight: bold; text-decoration: none;">
                 Solicitar orçamento via WhatsApp
             </a>
@@ -176,38 +177,6 @@
                 <i class="fab fa-instagram"></i>
             </a>
         </div>
-
-        <!-- <div class="contact-form">
-            <h2><strong>Solicite um orçamento!</strong></h2>
-            <form action="enviar-email.php" method="POST">
-                <div class="form-group">
-                    <label for="nome">Nome:</label>
-                    <input type="text" name="nome" id="nome" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="empresa">Empresa:</label>
-                    <input type="text" name="empresa" id="empresa" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" name="email" id="email" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="telefone">Telefone:</label>
-                    <input type="text" name="telefone" id="telefone" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="mensagem">Mensagem:</label>
-                    <textarea name="mensagem" id="mensagem" rows="5" required></textarea>
-                </div>
-
-                <button type="submit">Enviar</button>
-            </form>
-        </div> -->
 
         <section class="dev-partner">
             <p style="font-size: 0.9rem; color: #555;">
