Acertos para SPA

--- a/index.html
+++ b/index.html
@@ -81,25 +81,33 @@
         <div class="image left"></div>
 
         <div class="item">
-            <h3>Parcerias</h3>
+            <h3>Nossos Equipamentos</h3>
             <p>
-                Acreditamos que grandes obras exigem grandes aliados. A Estaca Max valoriza parcerias duradouras com
-                construtoras, engenheiros e profissionais do setor, contribuindo para projetos que demandam precisão e
-                confiança em fundações.
-                Nossa atuação colaborativa permite unir forças para entregar soluções estruturais com agilidade,
-                responsabilidade e excelência técnica. Além de contarmos com nosso parceiro no nicho da tecnologia, a
-                empresa Vetor256.
+                Possuímos equipamentos desde compactos com torre de 12m para perfurações de diâmetro de 25cm e 32cm por
+                12m de profundidade até equipamentos maiores e mais robustos para diâmetros de 40cm e 50cm por 16m de
+                profundidade. Caso necessite de diâmetro e profundiadade maiores, podemos atender sob consulta.
             </p>
         </div>
+
+        <div class="item">
+            <h3>Galeria</h3>
+            <h4>Nossas Fotos</h4>
+
+            <div class="foto-container">
+                <img src="images/icone-foto.png" alt="Ver foto" class="icone" onclick="mostrarFoto()">
+                <img src="images/foto-normal.png" alt="Foto ampliada" class="ampliada">
+            </div>
 
     </section>
 
     <section class="services" id="services">
 
         <div class="service">
-            <img src="./src/images/img1.png" alt="Fundação">
+            <a href="https://www.instagram.com/p/DMvpWd_Shb1/?igsh=azlzbXBjdWx5b3No" target="_blank"><img
+                    src="./src/images/parceria1.jpg" alt="Fundação" title="Ver vídeo no Instagram">
+            </a>
             <div class="service-info">
-                <h3>Fundação</h3>
+                <h3>Tipos de Fundações</h3>
                 <p>
                     A fundação é o alicerce de qualquer construção segura e duradoura. Na Estaca Max, aplicamos técnicas
                     modernas de bate estaca que garantem resistência, estabilidade e alto desempenho em terrenos dos
@@ -111,49 +119,27 @@
         </div>
 
         <div class="service">
-            <img src="./src/images/img3.png" alt="Alicerce">
+            <img src="./src/images/mapa.jpg" alt="Mapa">
             <div class="service-info">
-                <h3>Alicerce é a Base</h3>
+                <h3>Regiões Atendidas</h3>
                 <p>
-                    Toda grande construção começa com uma base firme. Mais do que concreto e aço, o alicerce representa
-                    a confiança depositada em um projeto bem executado.
-                    Na Estaca Max, tratamos cada obra como única, garantindo que seu alicerce esteja à altura dos sonhos
-                    que ela sustenta. Nossa missão é entregar segurança desde o primeiro impacto.
+                    Grande São Paulo (ABC), região de São José dos Campos (SJC), Campinas (RMC), Ribeirão Preto (RP),
+                    Sul de Minas (MG), Vale do Paraíba (RJ), entre outras localidades sob consulta.
                 </p>
             </div>
         </div>
 
     </section>
 
-    <section class="projects" id="projects">
-
-        <div class="project">
-            <img src="./src/images/contato2.png" alt="Desenho">
-        </div>
-
-        <div class="project">
-            <img src="./src/images/img4.jpg" alt="Prospectro">
-        </div>
-
-        <div class="project">
-            <img src="./src/images/contato1.png" alt="Contato1">
-        </div>
-
-        <div class="project">
-            <img src="./src/images/Bate-estacas1.png" alt="Contato2">
-        </div>
-
-    </section>
-
     <footer class="footer" id="contact">
-        <h4>Estaca Max - Fundação para a vida</h4>
-        <h5>Entre em contato</h5>
+        <h4>Estacamax - Fundações Especiais</h4>
+        <h5>Entre em contato</h5><br>
         <h5>
             <a href="mailto:estacamax.estacahelice@gmail.com?subject=Orçamento%20via%20site"
                 style="color: crimson; font-weight: bold; text-decoration: none;">
                 estacamax.estacahelice@gmail.com
             </a>
-        </h5>
+        </h5><br><br>
         <p>
             <a href="https://api.whatsapp.com/send?phone=5519991642519&text=Ol%C3%A1!%20Gostaria%20de%20solicitar%20um%20or%C3%A7amento%20com%20a%20Estacamax."
                 target="_blank" style="color: green; font-weight: bold; text-decoration: none;">
