Acertando links internos

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 
                 <ul>
                     <li><a href="#about">Sobre</a></li>
-                    <li><a href="#services">Serviços</a></li>
-                    <li><a href="#projects">Projetos</a></li>
+                    <li><a href="#equip">Equipamentos</a></li>
+                    <li><a href="#gal">Galeria</a></li>
+                    <li><a href="#reg">Regiões Atendidas</a></li>
                     <li><a href="#contact">Contato</a></li>
                 </ul>
 
@@ -54,7 +55,7 @@
 
     </header>
 
-    <section class="hero" id="about">
+    <section class="hero">
         <h2>
             Fundações Especiais
         </h2>
@@ -90,7 +91,7 @@
 
         <div class="image left"></div>
 
-        <div class="item">
+        <div class="item" id="equip">
             <h3>Nossos Equipamentos</h3>
             <p>
                 Possuímos equipamentos desde compactos com torre de 12m para perfurações de diâmetro de 25cm e 32cm por
@@ -100,7 +101,7 @@
         </div>
 
         <!-- Bloco de texto com miniaturas logo abaixo -->
-        <div class="item galeria">
+        <div class="item galeria" id="gal">
             <h3>Galeria</h3>
             <h4>Nossas Fotos</h4>
 
@@ -127,7 +128,7 @@
 
     </section>
 
-    <section class="services" id="services">
+    <section class="services" id="reg">
 
         <div class="service">
             <a href="https://www.instagram.com/p/DMvpWd_Shb1/?igsh=azlzbXBjdWx5b3No" target="_blank"><img
